analyzer/solParser.py
# Generated from sol.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class solParser(Parser):
    grammarFileName = "sol.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = ["<INVALID>", "'='", "'?'", "'#'", "'|'", "'-'", "'^'",
                    "'&'", "'('", "')'", "'{'", "'}'", "','", "'0'"]

    symbolicNames = ["<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "LETTER", "NON_ZERO_DIGIT",
                     "NEWLINE", "WS"]

    RULE_program = 0
    RULE_line = 1
    RULE_assignment = 2
    RULE_print_statement = 3
    RULE_comment = 4
    RULE_identifier = 5
    RULE_expression = 6
    RULE_term = 7
    RULE_factor = 8
    RULE_complex_factor = 9
    RULE_raw_set = 10
    RULE_row_of_numbers = 11
    RULE_natural_number = 12
    RULE_positive_number = 13
    RULE_number = 14
    RULE_zero = 15

    ruleNames = ["program", "line", "assignment", "print_statement", "comment",
                 "identifier", "expression", "term", "factor", "complex_factor",
                 "raw_set", "row_of_numbers", "natural_number", "positive_number",
                 "number", "zero"]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    LETTER = 14
    NON_ZERO_DIGIT = 15
    NEWLINE = 16
    WS = 17

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(solParser.EOF, 0)

        def line(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(solParser.LineContext)
            else:
                return self.getTypedRuleContext(solParser.LineContext, i)

        def getRuleIndex(self):
            return solParser.RULE_program

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterProgram"):
                listener.enterProgram(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitProgram"):
                listener.exitProgram(self)

    def program(self):

        localctx = solParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 32
                self.line()
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and (
                        (1 << _la) & ((1 << solParser.T__1) | (1 << solParser.T__2) | (1 << solParser.LETTER))) != 0)):
                    break

            self.state = 37
            self.match(solParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LineContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(solParser.NEWLINE, 0)

        def assignment(self):
            return self.getTypedRuleContext(solParser.AssignmentContext, 0)

        def print_statement(self):
            return self.getTypedRuleContext(solParser.Print_statementContext, 0)

        def comment(self):
            return self.getTypedRuleContext(solParser.CommentContext, 0)

        def getRuleIndex(self):
            return solParser.RULE_line

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLine"):
                listener.enterLine(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLine"):
                listener.exitLine(self)

    def line(self):

        localctx = solParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [solParser.LETTER]:
                self.state = 39
                self.assignment()
                pass
            elif token in [solParser.T__1]:
                self.state = 40
                self.print_statement()
                pass
            elif token in [solParser.T__2]:
                self.state = 41
                self.comment()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 44
            self.match(solParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(solParser.IdentifierContext, 0)

        def expression(self):
            return self.getTypedRuleContext(solParser.ExpressionContext, 0)

        def getRuleIndex(self):
            return solParser.RULE_assignment

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAssignment"):
                listener.enterAssignment(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAssignment"):
                listener.exitAssignment(self)

    def assignment(self):

        localctx = solParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.identifier()
            self.state = 47
            self.match(solParser.T__0)
            self.state = 48
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Print_statementContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(solParser.ExpressionContext, 0)

        def getRuleIndex(self):
            return solParser.RULE_print_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPrint_statement"):
                listener.enterPrint_statement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPrint_statement"):
                listener.exitPrint_statement(self)

    def print_statement(self):

        localctx = solParser.Print_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_print_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(solParser.T__1)
            self.state = 51
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommentContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return solParser.RULE_comment

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterComment"):
                listener.enterComment(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitComment"):
                listener.exitComment(self)

    def comment(self):

        localctx = solParser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_comment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(solParser.T__2)
            self.state = 54
            self.matchWildcard()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IdentifierContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LETTER(self, i: int = None):
            if i is None:
                return self.getTokens(solParser.LETTER)
            else:
                return self.getToken(solParser.LETTER, i)

        def number(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(solParser.NumberContext)
            else:
                return self.getTypedRuleContext(solParser.NumberContext, i)

        def getRuleIndex(self):
            return solParser.RULE_identifier

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterIdentifier"):
                listener.enterIdentifier(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitIdentifier"):
                listener.exitIdentifier(self)

    def identifier(self):

        localctx = solParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_identifier)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(solParser.LETTER)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & (
                    (1 << solParser.T__12) | (1 << solParser.LETTER) | (1 << solParser.NON_ZERO_DIGIT))) != 0):
                self.state = 59
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [solParser.LETTER]:
                    self.state = 57
                    self.match(solParser.LETTER)
                    pass
                elif token in [solParser.T__12, solParser.NON_ZERO_DIGIT]:
                    self.state = 58
                    self.number()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(solParser.TermContext)
            else:
                return self.getTypedRuleContext(solParser.TermContext, i)

        def getRuleIndex(self):
            return solParser.RULE_expression

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterExpression"):
                listener.enterExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitExpression"):
                listener.exitExpression(self)

    def expression(self):

        localctx = solParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expression)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.term()
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and (
                    (1 << _la) & ((1 << solParser.T__3) | (1 << solParser.T__4) | (1 << solParser.T__5))) != 0):
                self.state = 65
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and (
                        (1 << _la) & ((1 << solParser.T__3) | (1 << solParser.T__4) | (1 << solParser.T__5))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 66
                self.term()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(solParser.FactorContext)
            else:
                return self.getTypedRuleContext(solParser.FactorContext, i)

        def getRuleIndex(self):
            return solParser.RULE_term

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterTerm"):
                listener.enterTerm(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitTerm"):
                listener.exitTerm(self)

    def term(self):

        localctx = solParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_term)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.factor()
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == solParser.T__6:
                self.state = 73
                self.match(solParser.T__6)
                self.state = 74
                self.factor()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FactorContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(solParser.IdentifierContext, 0)

        def complex_factor(self):
            return self.getTypedRuleContext(solParser.Complex_factorContext, 0)

        def raw_set(self):
            return self.getTypedRuleContext(solParser.Raw_setContext, 0)

        def getRuleIndex(self):
            return solParser.RULE_factor

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFactor"):
                listener.enterFactor(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFactor"):
                listener.exitFactor(self)

    def factor(self):

        localctx = solParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_factor)
        try:
            self.state = 83
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [solParser.LETTER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.identifier()
                pass
            elif token in [solParser.T__7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.complex_factor()
                pass
            elif token in [solParser.T__9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 82
                self.raw_set()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Complex_factorContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(solParser.ExpressionContext, 0)

        def getRuleIndex(self):
            return solParser.RULE_complex_factor

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterComplex_factor"):
                listener.enterComplex_factor(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitComplex_factor"):
                listener.exitComplex_factor(self)

    def complex_factor(self):

        localctx = solParser.Complex_factorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_complex_factor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(solParser.T__7)
            self.state = 86
            self.expression()
            self.state = 87
            self.match(solParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Raw_setContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def row_of_numbers(self):
            return self.getTypedRuleContext(solParser.Row_of_numbersContext, 0)

        def getRuleIndex(self):
            return solParser.RULE_raw_set

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRaw_set"):
                listener.enterRaw_set(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRaw_set"):
                listener.exitRaw_set(self)

    def raw_set(self):

        localctx = solParser.Raw_setContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_raw_set)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(solParser.T__9)
            self.state = 90
            self.row_of_numbers()
            self.state = 91
            self.match(solParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Row_of_numbersContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def natural_number(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(solParser.Natural_numberContext)
            else:
                return self.getTypedRuleContext(solParser.Natural_numberContext, i)

        def getRuleIndex(self):
            return solParser.RULE_row_of_numbers

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRow_of_numbers"):
                listener.enterRow_of_numbers(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRow_of_numbers"):
                listener.exitRow_of_numbers(self)

    def row_of_numbers(self):

        localctx = solParser.Row_of_numbersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_row_of_numbers)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.natural_number()
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == solParser.T__11:
                self.state = 94
                self.match(solParser.T__11)
                self.state = 95
                self.natural_number()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Natural_numberContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def positive_number(self):
            return self.getTypedRuleContext(solParser.Positive_numberContext, 0)

        def zero(self):
            return self.getTypedRuleContext(solParser.ZeroContext, 0)

        def getRuleIndex(self):
            return solParser.RULE_natural_number

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterNatural_number"):
                listener.enterNatural_number(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitNatural_number"):
                listener.exitNatural_number(self)

    def natural_number(self):

        localctx = solParser.Natural_numberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_natural_number)
        try:
            self.state = 103
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [solParser.NON_ZERO_DIGIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.positive_number()
                pass
            elif token in [solParser.T__12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.zero()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Positive_numberContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NON_ZERO_DIGIT(self):
            return self.getToken(solParser.NON_ZERO_DIGIT, 0)

        def number(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(solParser.NumberContext)
            else:
                return self.getTypedRuleContext(solParser.NumberContext, i)

        def getRuleIndex(self):
            return solParser.RULE_positive_number

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPositive_number"):
                listener.enterPositive_number(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPositive_number"):
                listener.exitPositive_number(self)

    def positive_number(self):

        localctx = solParser.Positive_numberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_positive_number)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(solParser.NON_ZERO_DIGIT)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == solParser.T__12 or _la == solParser.NON_ZERO_DIGIT:
                self.state = 106
                self.number()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NumberContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def zero(self):
            return self.getTypedRuleContext(solParser.ZeroContext, 0)

        def NON_ZERO_DIGIT(self):
            return self.getToken(solParser.NON_ZERO_DIGIT, 0)

        def getRuleIndex(self):
            return solParser.RULE_number

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterNumber"):
                listener.enterNumber(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitNumber"):
                listener.exitNumber(self)

    def number(self):

        localctx = solParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_number)
        try:
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [solParser.T__12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.zero()
                pass
            elif token in [solParser.NON_ZERO_DIGIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.match(solParser.NON_ZERO_DIGIT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ZeroContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return solParser.RULE_zero

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterZero"):
                listener.enterZero(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitZero"):
                listener.exitZero(self)

    def zero(self):

        localctx = solParser.ZeroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_zero)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(solParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
